--- a/react/todo-list/src/index.css
+++ b/react/todo-list/src/index.css
@@ -1,3 +1,10 @@
+/* Tailwind */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -19,14 +26,11 @@ html {
 }
 
 body {
-  /* margin: 0;
-  padding: 0; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #ede5dd;
   height: calc(100% - 1em);
 }
 
@@ -34,4 +38,5 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  @apply h-full;
 }
